[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "antigravity-agent"
version = "0.1.0"
description = "Zero-Config AI Agent Workspace - clone, init, and run."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv",
    "click>=8.0",
    "requests",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0.0"]
dev = ["pytest", "pytest-cov"]

[project.scripts]
antigravity = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
src = ["template/**/*", "template/**/.*"]
